--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -236,6 +236,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="aaaaaaa\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
