--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -237,7 +237,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Jemplo\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -249,6 +248,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NFDao\NFDao.csproj">
+      <Project>{4169b81b-0247-49a8-be56-6a3edf79e139}</Project>
+      <Name>NFDao</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
