--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -124,7 +124,14 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Pages\Login.aspx" />
+    <Content Include="Images\iconDelete.png" />
+    <Content Include="Images\iconInsert.png" />
+    <Content Include="Images\iconUpdate.png" />
+    <Content Include="Pages\cashierCrud.aspx" />
+    <Content Include="Pages\CrudVolunteer.aspx" />
+    <Content Include="Pages\MedicCrud.aspx" />
+    <Content Include="Pages\SignIn.aspx" />
+    <Content Include="Pages\UserCrud.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -221,12 +228,40 @@
     <Compile Include="Page.Master.designer.cs">
       <DependentUpon>Page.Master</DependentUpon>
     </Compile>
-    <Compile Include="Pages\Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
+    <Compile Include="Pages\cashierCrud.aspx.cs">
+      <DependentUpon>cashierCrud.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Pages\Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
+    <Compile Include="Pages\cashierCrud.aspx.designer.cs">
+      <DependentUpon>cashierCrud.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CrudVolunteer.aspx.cs">
+      <DependentUpon>CrudVolunteer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\CrudVolunteer.aspx.designer.cs">
+      <DependentUpon>CrudVolunteer.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\MedicCrud.aspx.cs">
+      <DependentUpon>MedicCrud.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\MedicCrud.aspx.designer.cs">
+      <DependentUpon>MedicCrud.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SignIn.aspx.cs">
+      <DependentUpon>SignIn.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\SignIn.aspx.designer.cs">
+      <DependentUpon>SignIn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\UserCrud.aspx.cs">
+      <DependentUpon>UserCrud.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\UserCrud.aspx.designer.cs">
+      <DependentUpon>UserCrud.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
