--- a/NFDao/NFDao.csproj
+++ b/NFDao/NFDao.csproj
@@ -42,13 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Implementation\BaseCrud.cs" />
+    <Compile Include="Implementation\PersonImpl.cs" />
+    <Compile Include="Implementation\ShelterStaffImpl.cs" />
     <Compile Include="Implementation\SystemUserImpl.cs" />
     <Compile Include="Model\BaseConnection.cs" />
     <Compile Include="Model\KeyQuery.cs" />
     <Compile Include="Model\Person.cs" />
     <Compile Include="Model\ShelterStaff.cs" />
     <Compile Include="Model\SystemUser.cs" />
-    <Compile Include="Model\Vet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
