--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -130,6 +130,7 @@
     <Content Include="Pages\cashierCrud.aspx" />
     <Content Include="Pages\CrudVolunteer.aspx" />
     <Content Include="Pages\MedicCrud.aspx" />
+    <Content Include="Pages\MedicCrudUpdate.aspx" />
     <Content Include="Pages\SignIn.aspx" />
     <Content Include="Pages\UserCrud.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -248,6 +249,13 @@
     </Compile>
     <Compile Include="Pages\MedicCrud.aspx.designer.cs">
       <DependentUpon>MedicCrud.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\MedicCrudUpdate.aspx.cs">
+      <DependentUpon>MedicCrudUpdate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\MedicCrudUpdate.aspx.designer.cs">
+      <DependentUpon>MedicCrudUpdate.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\SignIn.aspx.cs">
       <DependentUpon>SignIn.aspx</DependentUpon>
