--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -126,7 +126,11 @@
     <Content Include="Global.asax" />
     <Content Include="Images\iconDelete.png" />
     <Content Include="Images\iconInsert.png" />
+    <Content Include="Images\iconPasswordBlack.png" />
     <Content Include="Images\iconUpdate.png" />
+    <Content Include="Images\NaricesFriasLogo.png" />
+    <Content Include="Images\NaricesFriasLogoWhite.png" />
+    <Content Include="Images\UserIconBlack.png" />
     <Content Include="Pages\cashierCrud.aspx" />
     <Content Include="Pages\CrudVolunteer.aspx" />
     <Content Include="Pages\MedicCrud.aspx" />
@@ -189,6 +193,9 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+    <Content Include="Stylesheets\LogIn.css" />
+    <Content Include="Stylesheets\MasterPage.css" />
+    <Content Include="Stylesheets\StylesCrud.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
