--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -135,6 +135,7 @@
     <Content Include="Pages\CrudVolunteer.aspx" />
     <Content Include="Pages\MedicCrud.aspx" />
     <Content Include="Pages\MedicCrudUpdate.aspx" />
+    <Content Include="Pages\MenuCruds.aspx" />
     <Content Include="Pages\SignIn.aspx" />
     <Content Include="Pages\UserCrud.aspx" />
     <Content Include="Pages\UserUpdate.aspx" />
@@ -264,6 +265,13 @@
     </Compile>
     <Compile Include="Pages\MedicCrudUpdate.aspx.designer.cs">
       <DependentUpon>MedicCrudUpdate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\MenuCruds.aspx.cs">
+      <DependentUpon>MenuCruds.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\MenuCruds.aspx.designer.cs">
+      <DependentUpon>MenuCruds.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\SignIn.aspx.cs">
       <DependentUpon>SignIn.aspx</DependentUpon>
