--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -132,6 +132,8 @@
     <Content Include="Images\NaricesFriasLogoWhite.png" />
     <Content Include="Images\UserIconBlack.png" />
     <Content Include="Pages\cashierCrud.aspx" />
+    <Content Include="Pages\CrudCharitableActivities.aspx" />
+    <Content Include="Pages\CrudPets.aspx" />
     <Content Include="Pages\CrudVolunteer.aspx" />
     <Content Include="Pages\MedicCrud.aspx" />
     <Content Include="Pages\MedicCrudUpdate.aspx" />
@@ -244,6 +246,20 @@
     </Compile>
     <Compile Include="Pages\cashierCrud.aspx.designer.cs">
       <DependentUpon>cashierCrud.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CrudCharitableActivities.aspx.cs">
+      <DependentUpon>CrudCharitableActivities.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\CrudCharitableActivities.aspx.designer.cs">
+      <DependentUpon>CrudCharitableActivities.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CrudPets.aspx.cs">
+      <DependentUpon>CrudPets.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\CrudPets.aspx.designer.cs">
+      <DependentUpon>CrudPets.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\CrudVolunteer.aspx.cs">
       <DependentUpon>CrudVolunteer.aspx</DependentUpon>
