--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -141,6 +141,7 @@
     <Content Include="Pages\SignIn.aspx" />
     <Content Include="Pages\UserCrud.aspx" />
     <Content Include="Pages\UserUpdate.aspx" />
+    <Content Include="Pages\CrudCharitableActivitiesUpdate.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -309,6 +310,13 @@
     </Compile>
     <Compile Include="Pages\UserUpdate.aspx.designer.cs">
       <DependentUpon>UserUpdate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CrudCharitableActivitiesUpdate.aspx.cs">
+      <DependentUpon>CrudCharitableActivitiesUpdate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\CrudCharitableActivitiesUpdate.aspx.designer.cs">
+      <DependentUpon>CrudCharitableActivitiesUpdate.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
