--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -179,6 +179,7 @@
     <Content Include="Pages\UserUpdate.aspx" />
     <Content Include="Pages\CrudCharitableActivitiesUpdate.aspx" />
     <Content Include="Pages\CrudProducts.aspx" />
+    <Content Include="Pages\CrudProductsUpdate.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -383,6 +384,13 @@
     </Compile>
     <Compile Include="Pages\CrudProducts.aspx.designer.cs">
       <DependentUpon>CrudProducts.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CrudProductsUpdate.aspx.cs">
+      <DependentUpon>CrudProductsUpdate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\CrudProductsUpdate.aspx.designer.cs">
+      <DependentUpon>CrudProductsUpdate.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
