--- a/NFDao/NFDao.csproj
+++ b/NFDao/NFDao.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Model\BillDetail.cs" />
     <Compile Include="Model\BillName.cs" />
     <Compile Include="Model\CharitableActivities.cs" />
+    <Compile Include="Model\CharitableActivitiesPost.cs" />
     <Compile Include="Model\KeyQuery.cs" />
     <Compile Include="Model\Person.cs" />
     <Compile Include="Model\Product.cs" />
