--- a/NFDao/NFDao.csproj
+++ b/NFDao/NFDao.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Model\SystemUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\EmailManager.cs" />
+    <Compile Include="Tools\ImageConverterDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
