--- a/NFDao/NFDao.csproj
+++ b/NFDao/NFDao.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Implementation\ProductImpl.cs" />
     <Compile Include="Implementation\ShelterStaffImpl.cs" />
     <Compile Include="Implementation\SystemUserImpl.cs" />
+    <Compile Include="Interfaces\IAnimalDate.cs" />
     <Compile Include="Interfaces\Ibill.cs" />
     <Compile Include="Interfaces\IBillDetail.cs" />
     <Compile Include="Interfaces\IbillName.cs" />
