--- a/NFDao/NFDao.csproj
+++ b/NFDao/NFDao.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\BillDetailComp.cs" />
     <Compile Include="Implementation\AnimalDateImpl.cs" />
     <Compile Include="Implementation\AnimalImpl.cs" />
     <Compile Include="Implementation\BaseCrud.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\EmailManager.cs" />
     <Compile Include="Tools\ImageConverterDAO.cs" />
+    <Compile Include="Tools\TempPassGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
