--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -259,9 +259,11 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="Stylesheets\AdminDateControl.css" />
+    <Content Include="Stylesheets\AnimalCards.css" />
     <Content Include="Stylesheets\AnimalForm.css" />
     <Content Include="Stylesheets\AnimalView.css" />
     <Content Include="Stylesheets\CharitableActivities.css" />
+    <Content Include="Stylesheets\CharitableActivitiesCatalogue.css" />
     <Content Include="Stylesheets\CrudCharitableActivities.css" />
     <Content Include="Stylesheets\Default.css" />
     <Content Include="Stylesheets\Landing.css" />
