--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -271,7 +271,9 @@
     <Content Include="Stylesheets\MenuStyle.css" />
     <Content Include="Stylesheets\RecoverAccount.css" />
     <Content Include="Stylesheets\StylesCrud.css" />
+    <Content Include="Stylesheets\UserForm.css" />
     <Content Include="Stylesheets\UserFormDate.css" />
+    <Content Include="Stylesheets\UserView.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
