Ultimas Vistas Estilos

--- a/Narices_Frias/Narices_Frias.csproj
+++ b/Narices_Frias/Narices_Frias.csproj
@@ -259,13 +259,18 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
     <Content Include="Stylesheets\AdminDateControl.css" />
+    <Content Include="Stylesheets\AdotedDogs.css" />
     <Content Include="Stylesheets\AnimalCards.css" />
     <Content Include="Stylesheets\AnimalForm.css" />
     <Content Include="Stylesheets\AnimalView.css" />
+    <Content Include="Stylesheets\BillsDetails.css" />
+    <Content Include="Stylesheets\BillView.css" />
     <Content Include="Stylesheets\cashierView.css" />
     <Content Include="Stylesheets\CharitableActivities.css" />
     <Content Include="Stylesheets\CharitableActivitiesCatalogue.css" />
+    <Content Include="Stylesheets\ContentGestorCharitable.css" />
     <Content Include="Stylesheets\CrudCharitableActivities.css" />
+    <Content Include="Stylesheets\CrudCharitableActivities2.css" />
     <Content Include="Stylesheets\CrudProducts.css" />
     <Content Include="Stylesheets\Default.css" />
     <Content Include="Stylesheets\Landing.css" />
